:construction: add audit endpoint as requested
